Tweaked profile view. Throttled ajax endpoint.

--- a/ringapp/templates/ringapp/about.html
+++ b/ringapp/templates/ringapp/about.html
@@ -18,7 +18,9 @@
         was made possible by books like Steen and Seebach's
         <a href="http://www.amazon.com/Counterexamples-Topology-Dover-Books-Mathematics/dp/048668735X">
         <i>Counterexamples in topology</i></a>, but still, retrieval is
-        limited a bit by manual use of the book.
+        limited a bit by manual use of the book. (<i>Update:</i> I recently was introduced to Hutchins' <a href="https://books.google.com/books?id=E2-mAAAAIAAJ&q=hutchins+examples+of+commutative+rings&dq=hutchins+examples+of+commutative+rings&hl=en&sa=X&ved=0ahUKEwia55K2z7rZAhXMc98KHa3kBSsQ6AEIKTAA"><i>Examples of
+            commutative rings.</i></a> 1981, which is now the largest text collection of ring examples -- all commutative--
+        that I'm aware of.)</p>
 
     <p>The DaRT, leveraging the power of software, can do much more. Not only
       can we maintain an ever-growing store of examples, we can also
@@ -36,7 +38,7 @@
     <p>In addition to rings and their properties, you can also find theorems of ring theory, many of which are fuel for
     the automated deduction scripts.</p>
 
-    <p>Check the FAQ if you have questions, and have fun exploring the data!</p>
+    <p>Have fun exploring the data, and be sure to register and contribute!</p>
   </div>
   <div class="col-md-4 content">  
     <h2>Contact</h2>
