Add dimensions page.

--- a/ringapp/templates/base.html
+++ b/ringapp/templates/base.html
@@ -87,6 +87,7 @@
                 <li><a href="{% url 'csearch' %}">Search commutative rings</a></li>
                 <hr />
                 <li><a href="{% url 'ksearch' %}">Search rings by keyword</a></li>
+                <li><a href="{% url 'dimension-list' %}">Browse rings by dimension</a></li>
 
 
               </ul>
