--- a/ringapp/templates/ringapp/index.html
+++ b/ringapp/templates/ringapp/index.html
@@ -28,6 +28,8 @@
                 All properties &raquo;</a><a class="btn btn-default"
                                              href="{% url 'commproperty-list' %}" role="button">
                 Commutative properties &raquo;</a></p>
+            <p><a class="btn btn-default" href="{% url 'dimension-list' %}" role="button">
+                By dimension &raquo;</a></p>
             <h2>Search <span class="icon-large icon-search"></span></h2>
             <p>You can search for rings by their properties. If you are only
                 interested in commutative rings, try the specialized search with
