Added 'how to cite' page with links in appropriate places.

--- a/ringapp/templates/ringapp/bibliography.html
+++ b/ringapp/templates/ringapp/bibliography.html
@@ -8,7 +8,7 @@
         <p>This page contains a list of works cited in the project. You may also be interested in
             <a href="{% url 'errata-list' %}">the errata page where we collect errors we have encountered in the
                 literature.</a></p>
-
+        <p>Looking for instructions on how to <a href="{% url 'cite' %}">cite this site?</a></p>
     </div>
 
     <div class="panel panel-default">
