--- a/ringapp/templates/base.html
+++ b/ringapp/templates/base.html
@@ -125,7 +125,7 @@
     </div>
     <hr />
     <div id="footer"><footer class="container">
-      <p>&copy;  Ryan C. Schwiebert 2014-2018 <span style="float:right;"><i class="glyphicon glyphicon-hand-right"></i> <a href="http://glyphicons.com/">Glyphicons</a></span></p>
+      <p>&copy;  Ryan C. Schwiebert 2014-2018. <a href="{% url 'cite' %}">(How to cite)</a>  <span style="float:right;"><i class="glyphicon glyphicon-hand-right"></i> <a href="http://glyphicons.com/">Glyphicons</a></span></p>
         </footer>
     </div>
     <!-- Bootstrap core JavaScript
