--- a/ringapp/templates/base.html
+++ b/ringapp/templates/base.html
@@ -98,6 +98,7 @@
             <li id="bibliographyNav"><a href="{% url 'bibliography'%}">Citations</a></li>
             <li id="contribNav"><a href="{% url 'contribute'%}">Contribute</a></li>
             <li id="resourcesNav"><a href="{% url 'resources'%}">Learn</a></li>
+            <li id="resourcesNav"><a href="{% url 'faq'%}">FAQ</a></li>
 
             <li> {% if not request.user.is_authenticated %}<a class="btn btn-primary"
                                                               href="{% url 'auth_login' %}"><font
@@ -125,7 +126,7 @@
     </div>
     <hr />
     <div id="footer"><footer class="container">
-      <p>&copy;  Ryan C. Schwiebert 2014-2018. <a href="{% url 'cite' %}">(How to cite)</a>  <span style="float:right;"><i class="glyphicon glyphicon-hand-right"></i> <a href="http://glyphicons.com/">Glyphicons</a></span></p>
+      <p>&copy;  Ryan C. Schwiebert 2014-2018. <a href="{% url 'faq' %}">(Help)</a>  <span style="float:right;"><i class="glyphicon glyphicon-hand-right"></i> <a href="http://glyphicons.com/">Glyphicons</a></span></p>
         </footer>
     </div>
     <!-- Bootstrap core JavaScript
