Swapped user field for citation field on properties. Added new faq entry.

--- a/ringapp/templates/ringapp/faq.html
+++ b/ringapp/templates/ringapp/faq.html
@@ -62,6 +62,14 @@
                 $R,M$ and $S$.
             </div>
         </div>
+        <div class="panel panel-default">
+            <div class="panel-heading"><b>Commonly used symbols and special conventions</b></div>
+            <div class="panel-body">
+                We use $k$ to denote a countably infinite field, and $K$ for an uncountable field. $\aleph_0$ is the
+                cardinality of the natural numbers. $\mathfrak c$ is the cardinality of the real numbers. $\Omega(n)$
+                is the total number of prime factors of $n$ (with repetition.)
+            </div>
+        </div>
 
     </div>
 </div>
