--- a/ringapp/templates/ringapp/property_detail.html
+++ b/ringapp/templates/ringapp/property_detail.html
@@ -4,60 +4,76 @@
 
 {% block content %}
 <div class="container">
-	<div class="panel panel-default">
-	  <div class="panel-heading"><h1>Property: {% if not object.symmetric %}(right/left){% endif %} {{ object.name }}</h1></div>
-	  <div class="panel-body">
+    <div class="row">
+        <div class="col-md-6 content">
+            <div class="panel panel-default">
+              <div class="panel-heading"><h1>Property: {% if not object.symmetric %}(right/left){% endif %} {{ object.name }}</h1></div>
+              <div class="panel-body">
 
 
-		{% if object %}
-			{% if not object.symmetric %}
-				<p>Definition: (right {{ object.name }}) {{ object.definition }}</p>
-				<ul class="list-group">
-				<li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?H={{ object.pk }}l"><span class="glyphicon glyphicon-search"></span>  Rings having property on left: {{ has_left_count }}</a></li>
-				<li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?L={{ object.pk }}l"><span class="glyphicon glyphicon-search"></span>  Rings not having property on left: {{ lacks_left_count }}</a></li>
-				<li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?H={{ object.pk }}r"><span class="glyphicon glyphicon-search"></span>  Rings having property on right: {{ has_right_count }}</a></li>
-				<li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?L={{ object.pk }}r"><span class="glyphicon glyphicon-search"></span>  Rings not having property on right: {{ lacks_right_count }}</a></li>
-				</ul>
-			{% else %}
-				<p>Definition: {{ object.definition }}</p>
-				<ul class="list-group">
-					<li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?H={{ object.pk }}"><span class="glyphicon glyphicon-search"></span>  Rings having property: {{ has_count }}</a></li>
-					<li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?L={{ object.pk }}"><span class="glyphicon glyphicon-search"></span>  Rings not having property: {{ lacks_count }}</a></li>
-				</ul>
-			{% endif %}
+                {% if object %}
+                    {% if not object.symmetric %}
+                        <p>Definition: (right {{ object.name }}) {{ object.definition }}</p>
+                        <ul class="list-group">
+                        <li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?H={{ object.pk }}l"><span class="glyphicon glyphicon-search"></span>  Rings having property on left: {{ has_left_count }}</a></li>
+                        <li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?L={{ object.pk }}l"><span class="glyphicon glyphicon-search"></span>  Rings not having property on left: {{ lacks_left_count }}</a></li>
+                        <li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?H={{ object.pk }}r"><span class="glyphicon glyphicon-search"></span>  Rings having property on right: {{ has_right_count }}</a></li>
+                        <li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?L={{ object.pk }}r"><span class="glyphicon glyphicon-search"></span>  Rings not having property on right: {{ lacks_right_count }}</a></li>
+                        </ul>
+                    {% else %}
+                        <p>Definition: {{ object.definition }}</p>
+                        <ul class="list-group">
+                            <li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?H={{ object.pk }}"><span class="glyphicon glyphicon-search"></span>  Rings having property: {{ has_count }}</a></li>
+                            <li class="list-group-item"><a class="btn btn-default" role="button" href="{% url 'results' %}?L={{ object.pk }}"><span class="glyphicon glyphicon-search"></span>  Rings not having property: {{ lacks_count }}</a></li>
+                        </ul>
+                    {% endif %}
 
-		{% if metaproperties %}
 
-			<h2>Metaproperties</h2>
-			{% if has_mp %}
-			This property has the following metaproperties
-			<ul>
-			{% for item in has_mp %}
-			<li>{{ item.metaproperty.name }}</li>
-			{% endfor %}
-			</ul>
-			{% endif %}
-			{% if lacks_mp %}
-		  This property <b>does not</b> have the following metaproperties
-			<ul>
-			{% for item in lacks_mp %}
-			<li>{{ item.metaproperty.name }}
-			{% if item.example is not None %}
-				(<a href="{% url 'ring-detail' item.example.id %}">counterexample</a>)
-			{% else %}
-				(counterexample needed)
-			{% endif %}
-			</li>
-			{% endfor %}
-			</ul>
-			{% endif %}
+              </div>
+            </div>
+        </div>
+        {% if object.citation.all %}
+        <div class="col-md-6 content">
+            <h2>Resources for learning about this property:</h2>
+            <ul>
+                {% for citation in object.citation.all %}
+                <li>{{ citation }}</li>
+                {% endfor%}
+            </ul>
 
-		{% endif %}
+            {% if metaproperties %}
+                <h2>Metaproperties:</h2>
+                {% if has_mp %}
+                This property has the following metaproperties
+                <ul>
+                {% for item in has_mp %}
+                <li>{{ item.metaproperty.name }}</li>
+                {% endfor %}
+                </ul>
+                {% endif %}
+                {% if lacks_mp %}
+              This property <b>does not</b> have the following metaproperties
+                <ul>
+                {% for item in lacks_mp %}
+                <li>{{ item.metaproperty.name }}
+                {% if item.example is not None %}
+                    (<a href="{% url 'ring-detail' item.example.id %}">counterexample</a>)
+                {% else %}
+                    (counterexample needed)
+                {% endif %}
+                </li>
+                {% endfor %}
+                </ul>
+                {% endif %}
 
-		{% else %}
-			<p>Nothing was retrieved.</p>
-		{% endif %}
-	  </div>
-	</div>
+            {% endif %}
+
+            {% else %}
+                <p>Nothing was retrieved.</p>
+            {% endif %}
+        </div>
+    </div>
+    {% endif %}
 </div>
+
 {% endblock %}
