Fixing a mistake in the templating.

--- a/ringapp/templates/ringapp/svgdiv.html
+++ b/ringapp/templates/ringapp/svgdiv.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 
-<img src="{% static 'img/ring_maps' %}/{{ filename|safe }}.svg" width="100%">
+<img src="{% static template_ref %}" width="100%">
 
 
 {% endblock %}
