Redirect to new RSS feed and blog.  List a few open questions on the contribs page.

--- a/ringapp/templates/ringapp/contribute.html
+++ b/ringapp/templates/ringapp/contribute.html
@@ -54,7 +54,12 @@
 
             <p><a href="{% url 'inspiration' %}">Here is a list outlining several gaps
                 that remain to be filled.</a></p>
-
+        <h2>Relevant open questions</h2>
+            <ol>
+                <li>It is unknown whether or not a right PCI ring is left PCI.</li>
+                <li>It is unknown whether or not a right QI ring is left QI.</li>
+                <li>It is unknown whether or not a right quasi-duo ring is left quasi-duo.</li>
+            </ol>
         </div>
       </div>
 </div>
